[package]
name = "dm-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
bitcoin = { version = "0.30.0", features = ["serde"] }
chrono = "0.4.24"
env_logger = "0.10.0"
hex-string = "0.1.0"
log = "0.4.17"
nostr = "0.21.0"
nostr-sdk = "0.21.0"
reqwest = { version = "0.11", default-features = false }
tokio = { version = "1", features = ["full"] }
